; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_string.c_strident_canon.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_string.c_strident_canon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strident_canon(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8, align 1
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = getelementptr inbounds i8, i8* %7, i64 %8
  %10 = getelementptr inbounds i8, i8* %9, i64 -1
  store i8* %10, i8** %6, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = load i8, i8* %11, align 1
  store i8 %12, i8* %5, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  br label %56

16:                                               ; preds = %2
  %17 = load i8, i8* %5, align 1
  %18 = call i32 @IS_ALPHA(i8 signext %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %26, label %20

20:                                               ; preds = %16
  %21 = load i8, i8* %5, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp ne i32 %22, 95
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = load i8*, i8** %3, align 8
  store i8 95, i8* %25, align 1
  br label %26

26:                                               ; preds = %24, %20, %16
  br label %27

27:                                               ; preds = %53, %26
  %28 = load i8*, i8** %3, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = icmp ult i8* %28, %29
  br i1 %30, label %31, label %37

31:                                               ; preds = %27
  %32 = load i8*, i8** %3, align 8
  %33 = getelementptr inbounds i8, i8* %32, i32 1
  store i8* %33, i8** %3, align 8
  %34 = load i8, i8* %33, align 1
  store i8 %34, i8* %5, align 1
  %35 = sext i8 %34 to i32
  %36 = icmp ne i32 %35, 0
  br label %37

37:                                               ; preds = %31, %27
  %38 = phi i1 [ false, %27 ], [ %36, %31 ]
  br i1 %38, label %39, label %54

39:                                               ; preds = %37
  %40 = load i8, i8* %5, align 1
  %41 = call i32 @IS_ALPHA(i8 signext %40)
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %53, label %43

43:                                               ; preds = %39
  %44 = load i8, i8* %5, align 1
  %45 = call i32 @IS_DIGIT(i8 signext %44)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %53, label %47

47:                                               ; preds = %43
  %48 = load i8, i8* %5, align 1
  %49 = sext i8 %48 to i32
  %50 = icmp ne i32 %49, 95
  br i1 %50, label %51, label %53

51:                                               ; preds = %47
  %52 = load i8*, i8** %3, align 8
  store i8 95, i8* %52, align 1
  br label %53

53:                                               ; preds = %51, %47, %43, %39
  br label %27

54:                                               ; preds = %37
  %55 = load i8*, i8** %3, align 8
  store i8 0, i8* %55, align 1
  br label %56

56:                                               ; preds = %54, %15
  ret void
}

declare dso_local i32 @IS_ALPHA(i8 signext) #1

declare dso_local i32 @IS_DIGIT(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
